--- a/themes/yld/layout/_partial/header.ejs
+++ b/themes/yld/layout/_partial/header.ejs
@@ -1,6 +1,12 @@
 <header id="header">
   <div id="banner"></div>
   <div id="header-outer" class="outer">
+<pre class="nyan">
+___━*━___━━___━__*___━_*___┓━╭­­­­­━━━━╮
+__*_━━___━━___━━*____━━___┗┓|:­­­­­:::::^-------^
+___━━___━*━___━━____━━*___━┗|:­­­­­:::|｡◕‿‿­­­­◕｡|
+___*━__━━_*___━━___*━━___*━━╰O­­­­­--O---O--O ╯
+</pre>
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
         <a href="<%- url_for() %>" id="logo"><%= config.title %></a>
@@ -30,3 +36,20 @@
     </div>
   </div>
 </header>
+
+ <!--
++      o      +      o     +      o     +      o     +              o
+    +            +            +             o     +       +
+o          +                     +
+    o  +         +          +           +        +
++        o   +        o   +        o     o       +        o
+_-_-_-_-_-_-_-_-_-_-__-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_,------,      o
+_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-|   /\_/\
+_-_-_-_-_-_-_-_-_-_-__-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-~|__( ^ .^)  +     +
+_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-""  ""
++      o     +      o     +      o         o   +       o
+    +            +            +         +
+o        o            o             o         o      o     +
+    o            o            o           +
++      +     +      +     +      +     o        o      +
+ -->
