--- a/themes/yld/source/css/_partial/header.styl
+++ b/themes/yld/source/css/_partial/header.styl
@@ -37,7 +37,7 @@
   text-align: center
   height: logo-size
   position: absolute
-  top: 50%
+  top: 30%
   left: 0
   margin-top: logo-size * -0.5
 
@@ -163,3 +163,8 @@ $nav-link
   cursor: pointer
   &:hover, &:focus
     color: #777
+
+.nyan
+  position: absolute
+  top: 60px
+  color: #fff
